--- a/graphicstext/texmacros.tex
+++ b/graphicstext/texmacros.tex
@@ -139,9 +139,9 @@
     \vglue 1.5 in
     \centerline{\Huge{Introduction to Computer Graphics}}
     \vskip 0.4 in
-    \centerline{\LARGE{Version 1.3, August 2021}}
-    \bigskip
-    \centerline{(\textit{Version 1.3.1, December 2021})}
+    \centerline{\LARGE{Version 1.4, Under Construction Summer 2023}}
+%    \bigskip
+%    \centerline{(\textit{Version 1.3.1, December 2021})}
     \vskip 1.5 in
     \centerline{\LARGE{David J. Eck}}
     \vskip 0.2 in
@@ -156,7 +156,7 @@
  
     {\leftskip=0.9 in \rightskip=0.9 in plus 0.2 in minus 0.2 in
  
-    \noindent\copyright 2015--2021, David J. Eck
+    \noindent\copyright 2015--2023, David J. Eck
     
     \bigskip
     
@@ -195,9 +195,9 @@
     \vglue 1.3 in
     \centerline{\Huge{Introduction to Computer Graphics}}
     \vskip 0.4 in
-    \centerline{\LARGE{Version 1.3, August 2021}}
-    \bigskip
-    \centerline{(\textit{Version 1.3.1, December 2021})}
+    \centerline{\LARGE{Version 1.4, Under Construction Summer 2023}}
+%    \bigskip
+%    \centerline{(\textit{Version 1.3.1, December 2021})}
     \vskip 1.2 in
     \centerline{\LARGE{David J. Eck}}
     \vskip 0.2 in
@@ -216,7 +216,7 @@
  
     {\leftskip=0.9 in \rightskip=0.9 in plus 0.2 in minus 0.2 in
  
-    \noindent\copyright 2015--2021, David J. Eck
+    \noindent\copyright 2015--2023, David J. Eck
     
     \bigskip
     
