some general editing, and added stubs for Sections 9.5, 9.6, 9.7

--- a/graphicstext/texmacros.tex
+++ b/graphicstext/texmacros.tex
@@ -89,6 +89,7 @@
 \newcommand{\7}{\ifmmode\cdot\else{$\cdot$}\fi}
 \newcommand{\8}{\ifmmode\times\else{$\times$}\fi}
 \newcommand{\9}{{\dots}}
+\newcommand{\tilda}{\texttt{\char`~}}
 
 \newcounter{exercisecounter}
 \newcommand{\exercise}{\par\bigskip\stepcounter{exercisecounter}\noindent\llap{\bfseries\arabic{exercisecounter}.\ }\ignorespaces}
