--- a/graphicstext/texmacros.tex
+++ b/graphicstext/texmacros.tex
@@ -140,7 +140,7 @@
     \vglue 1.5 in
     \centerline{\Huge{Introduction to Computer Graphics}}
     \vskip 0.4 in
-    \centerline{\LARGE{Version 1.4, Under Construction Summer 2023}}
+    \centerline{\LARGE{Version 1.4, August 2023}}
 %    \bigskip
 %    \centerline{(\textit{Version 1.3.1, December 2021})}
     \vskip 1.5 in
@@ -196,7 +196,7 @@
     \vglue 1.3 in
     \centerline{\Huge{Introduction to Computer Graphics}}
     \vskip 0.4 in
-    \centerline{\LARGE{Version 1.4, Under Construction Summer 2023}}
+    \centerline{\LARGE{Version 1.4, August 2023}}
 %    \bigskip
 %    \centerline{(\textit{Version 1.3.1, December 2021})}
     \vskip 1.2 in
